codama-syn-helpers/tests-macros/tests/as_path_value/from_verbatim.fail.stderr
error: expected a path followed by a value: `my_path = ...`
 --> tests/as_path_value/from_verbatim.fail.rs:3:17
  |
3 | #[as_path_value([==> ??? <==])]
  |                 ^^^^^^^^^^^^^
